Buffering bar + WebVTT text position support + WebVTT text alignment fixed

--- a/playr.css
+++ b/playr.css
@@ -47,16 +47,17 @@
 
 .playr_captions{
 	position:absolute;
-	bottom:5%;
+	bottom:4px;
 	width:100%;
-	text-align:center;
 	color:#fff;
 	overflow:hidden;
 }
 
 .playr_captions p{
+	display:inline-block;
+	margin:auto;
 	padding:4px;
-	background-color:rgba(0,0,0,0.5);
+	background-color:rgba(0,0,0,0.75);
 }
 
 .playr_controls{
@@ -141,12 +142,29 @@
 	opacity:1;
 }
 
-.playr_controls .playr_timebar{
+.playr_timebar{
 	height:10px;
 	width:100%;
 	border:1px solid #fff;
-	background-color:#666;
+	background: #666; /* Old browsers */
+	background: -moz-linear-gradient(top, #666 0%, #8e8e8e 50%, #666 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#666), color-stop(50%,#8e8e8e), color-stop(100%,#666)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #666 0%,#8e8e8e 50%,#666 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #666 0%,#8e8e8e 50%,#666 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #666 0%,#8e8e8e 50%,#666 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#666', endColorstr='#666',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #666 0%,#8e8e8e 50%,#666 100%); /* W3C */
 	margin:2px 6px 0 0;
+	-webkit-border-radius:10px;
+	-moz-border-radius:10px;
+	border-radius:10px;
+}
+
+.playr_timebar_buffer{
+	height:10px;
+	position:absolute;
+	width:0;
+	background-color:#32414f;
 	-webkit-border-radius:10px;
 	-moz-border-radius:10px;
 	border-radius:10px;
@@ -156,13 +174,18 @@
 	cursor:pointer;
 }
 
-.playr_controls .playr_timebar_inner{
-	height:12px;
+.playr_timebar_inner{
+	height:10px;
 	position:relative;
-	top:-1px;
-	left:-1px;
 	width:0;
-	background-color:#2172cd;
+	background: #6c9acc; /* Old browsers */
+	background: -moz-linear-gradient(top, #6c9acc 0%, #2172cd 50%, #6c9acc 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6c9acc), color-stop(50%,#2172cd), color-stop(100%,#6c9acc)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #6c9acc 0%,#2172cd 50%,#6c9acc 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #6c9acc 0%,#2172cd 50%,#6c9acc 100%); /* Opera11.10+ */
+	background: -ms-linear-gradient(top, #6c9acc 0%,#2172cd 50%,#6c9acc 100%); /* IE10+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6C9ACC', endColorstr='#6C9ACC',GradientType=0 ); /* IE6-9 */
+	background: linear-gradient(top, #6c9acc 0%,#2172cd 50%,#6c9acc 100%); /* W3C */
 	float:left;
 	-webkit-border-radius:10px;
 	-moz-border-radius:10px;
@@ -172,7 +195,7 @@
 .playr_timebar_pos{
 	position:relative;
 	right:-9px;
-	top:-2px;
+	top:-3px;
 	width:14px;
 	height:14px;
 	border:1px solid #fff;
@@ -191,6 +214,7 @@
 	background-color:#262626;
 	color:#fff;
 	padding:0 3px;
+	border:1px solid #777;
 	-o-transition:opacity .3s ease;
 	-webkit-transition:opacity .3s ease;
 	-moz-transition:opacity .3s ease;
@@ -333,18 +357,4 @@
 
 .playr_fullscreen_btn{
 	padding-right:1px;
-}
-
-/* captions styles */
-
-.playr_captions_Astart{
-	text-align:left;
-}
-
-.playr_captions_Amiddle{
-	text-align:center;
-}
-
-.playr_captions_Aend{
-	text-align:right;
 }
